--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="styles/card.css">
     <title>PORTAL DE NOTICIA GALATICO</title>
+    <link rel="stylesheet" href="styles/card.css">
+    <script src="src/components/cardNews.js" defer></script>
+    <script src="src/components/TituloDinamico.js" defer></script>
 </head>
 <body>
     <div class="container">
@@ -21,6 +22,13 @@
                 <img src="assets/asset-vader.png" alt="Darth Vader chamando">
             </div>
         </div>
+        <titulo-dinamico titulo="Noticia urgente"></titulo-dinamico>
     </div>
+
+    <card-news></card-news>
+    <card-news></card-news>
+    <card-news></card-news>
+    <titulo-dinamico titulo="Titulo"></titulo-dinamico> 
+    
 </body>
 </html>
